test/lexer/file-expand-03.hac
// "file-expand-03.hac"
// line 2: expect-fail
// line 3: and counting
#FILE "bogus.hac" %{	// from import "bogus.hac";	// line 4

bool x;

%} // #FILE "bogus.hac"
#FILE "bogus2.hac" %{	// from import "bogus.hac";	// line 5
bool y;
%} // #FILE "bogus2.hac"
// line 6
bool error here;        // line 7 -- error should point here

